# wfn_tex

./: .gitignore  CMakeLists.txt  README.md
src/: animation.hpp  loader.cpp  loader.hpp  texture.hpp
